--- a/Docker/CUDA/Dockerfile
+++ b/Docker/CUDA/Dockerfile
@@ -1,3 +1,19 @@
+###########################################################################
+# Dugong - Scientific Linux Containers for Bioinformatics
+# ========================================================
+#
+# Current development is led by Fabiano Menegidio.
+#
+# Bioinformatician/Bioinformaticist at the Laboratory of Functional 
+# and Structural Genomics of the Integrated Nucleus of Biotechnology 
+# at the University of Mogi das Cruzes, Brazil.
+# 
+# Contact: fabiano.menegidio@biology.bio.br
+# GitHub: https://github.com/fabianomenegidio
+# GitHub: https://github.com/DugongBioinformatics
+#
+###########################################################################
+
 FROM dugong/daas:base
 MAINTAINER Fabiano Menegidio <fabiano.menegidio@biology.bio.br>
 
