--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -37,8 +37,10 @@ RUN apt-get update \
 ##################################################################################################
 
 ADD install.sh ./install.sh
-RUN chmod +x ./install.sh \
-    && ./install.sh
 COPY docker-entrypoint.sh /usr/local/bin/
+RUN chmod +x ./install.sh \
+    && chmod +x /usr/local/bin/docker-entrypoint.sh \
+    && ./install.sh
+
 
 ENTRYPOINT ["docker-entrypoint.sh"]
