--- a/Docker/MinimalBase/Dockerfile
+++ b/Docker/MinimalBase/Dockerfile
@@ -40,28 +40,14 @@ RUN echo $LANG UTF-8 > /etc/locale.gen \
     && update-locale --reset LANG=$LANG \
     && locale-gen en_US.UTF-8 
 
-############### Create User and Password
+# startscript to copy dotfiles from /etc/skel
+# runs either CMD or image command from docker run
+RUN echo '#! /bin/sh\n\
+    [ -n "$HOME" ] && [ ! -e "$HOME/.config" ] && cp -R /etc/skel/. $HOME/ \n\
+    exec $*\n\
+' > /usr/local/bin/start \
+    && chmod +x /usr/local/bin/start 
 
-ENV USER dugong
-ENV HOME /headless
-
-RUN export PASS="$(pwgen -1 12)" \
-    && useradd -d $HOME --shell /bin/bash --user-group --groups adm,sudo $USER \
-    && echo "$USER:$PASS" | chpasswd \
-    && echo "$USER ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers \
-    && mkdir -p $HOME/data \
-    && mkdir -p $HOME/.ve \
-    && mkdir -p $HOME/.workspace \
-    && ln -s $HOME/.ve $HOME/data/.ve && ln -s $HOME/.workspace $HOME/data/.workspace \
-    && echo "############### Welcome to Minimal Dugong ###############"  > $HOME/.login \
-    && echo "############## User: $USER - Pass: $PASS ##############" >> $HOME/.login \
-    && chown -R $USER:$USER $HOME
-
-USER $USER
-WORKDIR $HOME/data
-
+ENTRYPOINT ["/usr/local/bin/start"]
 ENTRYPOINT ["tini", "--"]
-VOLUME ["$HOME/data"]
 CMD ["/bin/bash"]
-
-RUN cat $HOME/.login
