--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -32,6 +32,15 @@ RUN apt-get update \
 
 ##################################################################################################
 
-ADD install.sh ./install.sh
-RUN chmod +x ./install.sh \
-    && ./install.sh
+RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - \
+    && apt-key export "9DC8 5822 9FC7 DD38 854A E2D8 8D81 803C 0EBF CD88" | gpg - \
+    && echo "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable" >> /etc/apt/sources.list.d/docker.list \
+    && apt-get update && apt-get -y -q --no-install-recommends install docker-ce \
+    && apt-get --fix-missing install && apt --fix-broken install \
+    && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+    && /bin/bash systemctl enable docker \
+    && /bin/bash service start docker
+    
+VOLUME /var/lib/docker
+EXPOSE 2375
+
