--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -32,19 +32,13 @@ RUN apt-get update \
 
 ##################################################################################################
 
-RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - \
-    && apt-key export "9DC8 5822 9FC7 DD38 854A E2D8 8D81 803C 0EBF CD88" | gpg - \
-    && echo "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable" >> /etc/apt/sources.list.d/docker.list \
-    && apt-get update && apt-get -y -q --no-install-recommends install docker-ce \
-    && apt-get --fix-missing install && apt --fix-broken install \
-    && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* 
+# Install Docker from Docker Inc. repositories.
+RUN curl -sSL https://get.docker.com/ | sh
 
-ADD wrapdocker /usr/local/bin/wrapdocker
+# Install the magic wrapper.
+ADD ./wrapdocker /usr/local/bin/wrapdocker
 RUN chmod +x /usr/local/bin/wrapdocker
+
+# Define additional metadata for our image.
 VOLUME /var/lib/docker
-EXPOSE 2375
-
-
-ADD startup.sh /
-RUN chmod +x /startup.sh
-CMD ["/startup.sh"]
+CMD ["wrapdocker"]
