--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -35,10 +35,11 @@ ENV NB_USER="root"
 ENV PYTHON_VERSION="Miniconda3-latest"
 ENV JUPYTER_PORT=8888
 ENV CONDA_DIR="$HOME/.conda"
-ENV LANG en_US.UTF-8  
-ENV LANGUAGE en_US:en  
-ENV LC_ALL en_US.UTF-8
-ENV LANG C.UTF-8
+ENV CONDA_PYTHON_DIR="/opt/conda/lib/python3.6"
+ENV LANG="en_US.UTF-8"
+ENV LANGUAGE="en_US:en"
+ENV LC_ALL="en_US.UTF-8"
+ENV LANG="C.UTF-8"
 
 WORKDIR $HOME
 
