--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -56,6 +56,7 @@ RUN mkdir $RESOURCES_PATH && chmod a+rwx $RESOURCES_PATH \
 RUN apt-get update --fix-missing \
     && DEBIAN_FRONTEND=noninteractive \
     && apt-get install -y sudo apt-utils \
+    && add-apt-repository "deb http://security.ubuntu.com/ubuntu xenial-security main" \
     && apt-get upgrade -y && apt-get update \
     && apt-get install -y --allow-unauthenticated --no-install-recommends \
     build-essential software-properties-common ca-certificates bash-completion \
