--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -55,17 +55,17 @@ RUN mkdir $RESOURCES_PATH && chmod a+rwx $RESOURCES_PATH \
 ##############################################################################
 RUN apt-get update --fix-missing \
     && DEBIAN_FRONTEND=noninteractive \
-    && apt-get install -y sudo apt-utils \
+    && apt-get install -y apt-utils software-properties-common ca-certificates \
+    apt-transport-https \
     && add-apt-repository "deb http://security.ubuntu.com/ubuntu xenial-security main" \
     && add-apt-repository "deb http://nebc.nerc.ac.uk/bio-linux/ unstable bio-linux" \
     && add-apt-repository "deb http://ppa.launchpad.net/nebc/bio-linux/ubuntu precise main" \
     && add-apt-repository "deb-src http://ppa.launchpad.net/nebc/bio-linux/ubuntu precise main" \
     && apt-get upgrade -y && apt-get update \
     && apt-get install -y --allow-unauthenticated --no-install-recommends \
-    build-essential software-properties-common ca-certificates bash-completion \
-    apt-transport-https net-tools locales screen unzip util-linux pwgen fuse \
-    xterm git curl libcurl3 wget vim dpkg automake cmake sed grep gnupg2 \
-    lsof cron openssl tmux nano sqlite3 xmlstarlet libhiredis-dev less tree \
+    build-essential bash-completion net-tools locales screen unzip util-linux \
+    xterm git curl libcurl3 wget vim dpkg automake cmake sed grep gnupg2 pwgen \
+    lsof cron openssl tmux nano sqlite3 xmlstarlet libhiredis-dev less tree fuse \
     iputils-ping locate jq rsync subversion mercurial jed unixodbc unixodbc-dev \
     libtiff-dev libjpeg-dev libpng-dev libjasper-dev libglib2.0-0 libxext6 libsm6 \
     libxext-dev libxrender1 libzmq-dev protobuf-compiler autoconf libprotobuf-dev \
