--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -102,7 +102,7 @@ RUN apt-get update --fix-missing \
     lsof cron openssl tmux nano sqlite3 xmlstarlet libhiredis-dev less tree fuse \
     iputils-ping locate jq rsync subversion mercurial jed unixodbc unixodbc-dev \
     libtiff-dev libjpeg-dev libpng-dev libjasper-dev libglib2.0-0 libxext6 libsm6 \
-    libxext-dev libxrender1 libzmq-dev protobuf-compiler autoconf libprotobuf-dev \
+    libxext-dev libxrender1 libzmq3-dev protobuf-compiler autoconf libprotobuf-dev \
     google-perftools libprotoc-dev automake libtool cmake fonts-liberation zip arj \
     gzip unrar bzip2 lzop bsdtar zlib1g-dev pkg-config libgtk-3-bin libgtk-3-common \
     libgtk-3-0:amd64 libgtk-3-dev \
