--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -1,20 +1,4 @@
-##############################################################################
-# Dugong - Scientific Linux Containers for Bioinformatics
-# ============================================================================
-#
-# Current development is led by Fabiano Menegidio.
-#
-# Bioinformatician/Bioinformaticist at the Laboratory of Functional 
-# and Structural Genomics of the Integrated Nucleus of Biotechnology 
-# at the University of Mogi das Cruzes, Brazil.
-# 
-# Contact: fabiano.menegidio@biology.bio.br
-# GitHub: https://github.com/fabianomenegidio
-# GitHub: https://github.com/DugongBioinformatics
-#
-##############################################################################
-
-FROM ubuntu:latest
+FROM ubuntu:18.04
 
 ##############################################################################
 # Metadata
