--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -57,6 +57,7 @@ ENV PYTHON_VERSION="Miniconda3-latest"
 ENV JUPYTER_PORT=8888
 ENV CONDA_DIR="$HOME/.conda"
 ENV CONDA_PYTHON_DIR="/opt/conda/lib/python3.6"
+ENV PATH $CONDA_DIR:$CONDA_DIR/bin:$PATH
 ENV LANG="en_US.UTF-8"
 ENV LANGUAGE="en_US:en"
 ENV LC_ALL="en_US.UTF-8"
