--- a/Dockerfile.CPU
+++ b/Dockerfile.CPU
@@ -127,6 +127,7 @@ RUN apt-get update --fix-missing \
 ##############################################################################
 # Install packages through Scif
 ##############################################################################
+    scif install $SCIF_PATH/nginx.scif
 
 ENTRYPOINT ["/usr/local/bin/start"]
 ENTRYPOINT ["tini", "--"]
